crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_singles_over_doubles_escaped.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
doubles_escaped.py:1:26: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
  |
1 | this_should_raise_Q003 = 'This is a \'string\''
  |                          ^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
2 | this_should_raise_Q003 = 'This is \\ a \\\'string\''
3 | this_is_fine = '"This" is a \'string\''
  |
  = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
1   |-this_should_raise_Q003 = 'This is a \'string\''
  1 |+this_should_raise_Q003 = "This is a 'string'"
2 2 | this_should_raise_Q003 = 'This is \\ a \\\'string\''
3 3 | this_is_fine = '"This" is a \'string\''
4 4 | this_is_fine = "This is a 'string'"

doubles_escaped.py:2:26: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
  |
1 | this_should_raise_Q003 = 'This is a \'string\''
2 | this_should_raise_Q003 = 'This is \\ a \\\'string\''
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
3 | this_is_fine = '"This" is a \'string\''
4 | this_is_fine = "This is a 'string'"
  |
  = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
1 1 | this_should_raise_Q003 = 'This is a \'string\''
2   |-this_should_raise_Q003 = 'This is \\ a \\\'string\''
  2 |+this_should_raise_Q003 = "This is \\ a \\'string'"
3 3 | this_is_fine = '"This" is a \'string\''
4 4 | this_is_fine = "This is a 'string'"
5 5 | this_is_fine = "\"This\" is a 'string'"

doubles_escaped.py:10:5: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
 8 | this_should_raise = (
 9 |     'This is a'
10 |     '\'string\''
   |     ^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
11 | )
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
7  7  | this_is_fine = R'This is a \'string\''
8  8  | this_should_raise = (
9  9  |     'This is a'
10    |-    '\'string\''
   10 |+    "'string'"
11 11 | )
12 12 | 
13 13 | # Same as above, but with f-strings

doubles_escaped.py:14:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
13 | # Same as above, but with f-strings
14 | f'This is a \'string\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
15 | f'This is \\ a \\\'string\''  # Q003
16 | f'"This" is a \'string\''
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
11 11 | )
12 12 | 
13 13 | # Same as above, but with f-strings
14    |-f'This is a \'string\''  # Q003
   14 |+f"This is a 'string'"  # Q003
15 15 | f'This is \\ a \\\'string\''  # Q003
16 16 | f'"This" is a \'string\''
17 17 | f"This is a 'string'"

doubles_escaped.py:15:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
13 | # Same as above, but with f-strings
14 | f'This is a \'string\''  # Q003
15 | f'This is \\ a \\\'string\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
16 | f'"This" is a \'string\''
17 | f"This is a 'string'"
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
12 12 | 
13 13 | # Same as above, but with f-strings
14 14 | f'This is a \'string\''  # Q003
15    |-f'This is \\ a \\\'string\''  # Q003
   15 |+f"This is \\ a \\'string'"  # Q003
16 16 | f'"This" is a \'string\''
17 17 | f"This is a 'string'"
18 18 | f"\"This\" is a 'string'"

doubles_escaped.py:23:5: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
21 | foo = (
22 |     f'This is a'
23 |     f'\'string\''  # Q003
   |     ^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
24 | )
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
20 20 | fR'This is a \'string\''
21 21 | foo = (
22 22 |     f'This is a'
23    |-    f'\'string\''  # Q003
   23 |+    f"'string'"  # Q003
24 24 | )
25 25 | 
26 26 | # Nested f-strings (Python 3.12+)

doubles_escaped.py:33:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
31 | #
32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33 | f'\'foo\' {'nested'}'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
34 | f'\'foo\' {f'nested'}'  # Q003
35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
30 30 | #   f"'foo' {'nested'}"
31 31 | #
32 32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33    |-f'\'foo\' {'nested'}'  # Q003
   33 |+f"'foo' {'nested'}"  # Q003
34 34 | f'\'foo\' {f'nested'}'  # Q003
35 35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
36 36 | 

doubles_escaped.py:34:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33 | f'\'foo\' {'nested'}'  # Q003
34 | f'\'foo\' {f'nested'}'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
31 31 | #
32 32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33 33 | f'\'foo\' {'nested'}'  # Q003
34    |-f'\'foo\' {f'nested'}'  # Q003
   34 |+f"'foo' {f'nested'}"  # Q003
35 35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
36 36 | 
37 37 | f'normal {f'nested'} normal'

doubles_escaped.py:35:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
33 | f'\'foo\' {'nested'}'  # Q003
34 | f'\'foo\' {f'nested'}'  # Q003
35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
36 |
37 | f'normal {f'nested'} normal'
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
32 32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33 33 | f'\'foo\' {'nested'}'  # Q003
34 34 | f'\'foo\' {f'nested'}'  # Q003
35    |-f'\'foo\' {f'\'nested\''} \'\''  # Q003
   35 |+f"'foo' {f'\'nested\''} ''"  # Q003
36 36 | 
37 37 | f'normal {f'nested'} normal'
38 38 | f'\'normal\' {f'nested'} normal'  # Q003

doubles_escaped.py:35:12: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
33 | f'\'foo\' {'nested'}'  # Q003
34 | f'\'foo\' {f'nested'}'  # Q003
35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
   |            ^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
36 |
37 | f'normal {f'nested'} normal'
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
32 32 | # but as the actual string itself is invalid pre 3.12, we don't catch it.
33 33 | f'\'foo\' {'nested'}'  # Q003
34 34 | f'\'foo\' {f'nested'}'  # Q003
35    |-f'\'foo\' {f'\'nested\''} \'\''  # Q003
   35 |+f'\'foo\' {f"'nested'"} \'\''  # Q003
36 36 | 
37 37 | f'normal {f'nested'} normal'
38 38 | f'\'normal\' {f'nested'} normal'  # Q003

doubles_escaped.py:38:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
37 | f'normal {f'nested'} normal'
38 | f'\'normal\' {f'nested'} normal'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
39 | f'\'normal\' {f'nested'} "double quotes"'
40 | f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
35 35 | f'\'foo\' {f'\'nested\''} \'\''  # Q003
36 36 | 
37 37 | f'normal {f'nested'} normal'
38    |-f'\'normal\' {f'nested'} normal'  # Q003
   38 |+f"'normal' {f'nested'} normal"  # Q003
39 39 | f'\'normal\' {f'nested'} "double quotes"'
40 40 | f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
41 41 | f'\'normal\' {f'\'nested\' {'other'} "double quotes"'} normal'  # Q00l

doubles_escaped.py:40:15: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
38 | f'\'normal\' {f'nested'} normal'  # Q003
39 | f'\'normal\' {f'nested'} "double quotes"'
40 | f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
41 | f'\'normal\' {f'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
37 37 | f'normal {f'nested'} normal'
38 38 | f'\'normal\' {f'nested'} normal'  # Q003
39 39 | f'\'normal\' {f'nested'} "double quotes"'
40    |-f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   40 |+f'\'normal\' {f"'nested' {'other'} normal"} "double quotes"'  # Q003
41 41 | f'\'normal\' {f'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
42 42 | 
43 43 | 

doubles_escaped.py:41:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
39 | f'\'normal\' {f'nested'} "double quotes"'
40 | f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
41 | f'\'normal\' {f'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
38 38 | f'\'normal\' {f'nested'} normal'  # Q003
39 39 | f'\'normal\' {f'nested'} "double quotes"'
40 40 | f'\'normal\' {f'\'nested\' {'other'} normal'} "double quotes"'  # Q003
41    |-f'\'normal\' {f'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   41 |+f"'normal' {f'\'nested\' {'other'} "double quotes"'} normal"  # Q00l
42 42 | 
43 43 | 
44 44 | 

doubles_escaped.py:46:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
45 | # Same as above, but with t-strings
46 | t'This is a \'string\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
47 | t'This is \\ a \\\'string\''  # Q003
48 | t'"This" is a \'string\''
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
43 43 | 
44 44 | 
45 45 | # Same as above, but with t-strings
46    |-t'This is a \'string\''  # Q003
   46 |+t"This is a 'string'"  # Q003
47 47 | t'This is \\ a \\\'string\''  # Q003
48 48 | t'"This" is a \'string\''
49 49 | f"This is a 'string'"

doubles_escaped.py:47:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
45 | # Same as above, but with t-strings
46 | t'This is a \'string\''  # Q003
47 | t'This is \\ a \\\'string\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
48 | t'"This" is a \'string\''
49 | f"This is a 'string'"
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
44 44 | 
45 45 | # Same as above, but with t-strings
46 46 | t'This is a \'string\''  # Q003
47    |-t'This is \\ a \\\'string\''  # Q003
   47 |+t"This is \\ a \\'string'"  # Q003
48 48 | t'"This" is a \'string\''
49 49 | f"This is a 'string'"
50 50 | f"\"This\" is a 'string'"

doubles_escaped.py:55:5: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
53 | foo = (
54 |     t'This is a'
55 |     t'\'string\''  # Q003
   |     ^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
56 | )
57 | t'\'foo\' {'nested'}'  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
52 52 | fR'This is a \'string\''
53 53 | foo = (
54 54 |     t'This is a'
55    |-    t'\'string\''  # Q003
   55 |+    t"'string'"  # Q003
56 56 | )
57 57 | t'\'foo\' {'nested'}'  # Q003
58 58 | t'\'foo\' {t'nested'}'  # Q003

doubles_escaped.py:57:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
55 |     t'\'string\''  # Q003
56 | )
57 | t'\'foo\' {'nested'}'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
58 | t'\'foo\' {t'nested'}'  # Q003
59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
54 54 |     t'This is a'
55 55 |     t'\'string\''  # Q003
56 56 | )
57    |-t'\'foo\' {'nested'}'  # Q003
   57 |+t"'foo' {'nested'}"  # Q003
58 58 | t'\'foo\' {t'nested'}'  # Q003
59 59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
60 60 | 

doubles_escaped.py:58:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
56 | )
57 | t'\'foo\' {'nested'}'  # Q003
58 | t'\'foo\' {t'nested'}'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
55 55 |     t'\'string\''  # Q003
56 56 | )
57 57 | t'\'foo\' {'nested'}'  # Q003
58    |-t'\'foo\' {t'nested'}'  # Q003
   58 |+t"'foo' {t'nested'}"  # Q003
59 59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
60 60 | 
61 61 | t'normal {t'nested'} normal'

doubles_escaped.py:59:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
57 | t'\'foo\' {'nested'}'  # Q003
58 | t'\'foo\' {t'nested'}'  # Q003
59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
60 |
61 | t'normal {t'nested'} normal'
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
56 56 | )
57 57 | t'\'foo\' {'nested'}'  # Q003
58 58 | t'\'foo\' {t'nested'}'  # Q003
59    |-t'\'foo\' {t'\'nested\''} \'\''  # Q003
   59 |+t"'foo' {t'\'nested\''} ''"  # Q003
60 60 | 
61 61 | t'normal {t'nested'} normal'
62 62 | t'\'normal\' {t'nested'} normal'  # Q003

doubles_escaped.py:59:12: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
57 | t'\'foo\' {'nested'}'  # Q003
58 | t'\'foo\' {t'nested'}'  # Q003
59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
   |            ^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
60 |
61 | t'normal {t'nested'} normal'
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
56 56 | )
57 57 | t'\'foo\' {'nested'}'  # Q003
58 58 | t'\'foo\' {t'nested'}'  # Q003
59    |-t'\'foo\' {t'\'nested\''} \'\''  # Q003
   59 |+t'\'foo\' {t"'nested'"} \'\''  # Q003
60 60 | 
61 61 | t'normal {t'nested'} normal'
62 62 | t'\'normal\' {t'nested'} normal'  # Q003

doubles_escaped.py:62:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
61 | t'normal {t'nested'} normal'
62 | t'\'normal\' {t'nested'} normal'  # Q003
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
63 | t'\'normal\' {t'nested'} "double quotes"'
64 | t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
59 59 | t'\'foo\' {t'\'nested\''} \'\''  # Q003
60 60 | 
61 61 | t'normal {t'nested'} normal'
62    |-t'\'normal\' {t'nested'} normal'  # Q003
   62 |+t"'normal' {t'nested'} normal"  # Q003
63 63 | t'\'normal\' {t'nested'} "double quotes"'
64 64 | t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
65 65 | t'\'normal\' {t'\'nested\' {'other'} "double quotes"'} normal'  # Q00l

doubles_escaped.py:64:15: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
62 | t'\'normal\' {t'nested'} normal'  # Q003
63 | t'\'normal\' {t'nested'} "double quotes"'
64 | t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
65 | t'\'normal\' {t'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
61 61 | t'normal {t'nested'} normal'
62 62 | t'\'normal\' {t'nested'} normal'  # Q003
63 63 | t'\'normal\' {t'nested'} "double quotes"'
64    |-t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
   64 |+t'\'normal\' {t"'nested' {'other'} normal"} "double quotes"'  # Q003
65 65 | t'\'normal\' {t'\'nested\' {'other'} "double quotes"'} normal'  # Q00l

doubles_escaped.py:65:1: Q003 (avoidable-escaped-quote) [*] Change outer quotes to avoid escaping inner quotes
   |
63 | t'\'normal\' {t'nested'} "double quotes"'
64 | t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
65 | t'\'normal\' {t'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q003 (avoidable-escaped-quote)
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
62 62 | t'\'normal\' {t'nested'} normal'  # Q003
63 63 | t'\'normal\' {t'nested'} "double quotes"'
64 64 | t'\'normal\' {t'\'nested\' {'other'} normal'} "double quotes"'  # Q003
65    |-t'\'normal\' {t'\'nested\' {'other'} "double quotes"'} normal'  # Q00l
   65 |+t"'normal' {t'\'nested\' {'other'} "double quotes"'} normal"  # Q00l
